--- a/Does Institutional Linkage of Bank-MFI Foster Inclusive Financial Development.Rmd
+++ b/Does Institutional Linkage of Bank-MFI Foster Inclusive Financial Development.Rmd
@@ -215,26 +215,50 @@ $Proof.$ The probability of credit rationing is $\rho ^{*} / \frac{c^{*L}}{\bar{
 
 $Proposition \ 8.$ A linkage with the MFI benefits more in a less competitive banking sector.
 
+$Proof.$ We here show that the difference $\left ( \frac{c^{*L}}{\bar{c}^{L}}-\frac{c^{*}}{\bar{c}} \right )$ will increase with $r^{c}$. First, notice that $\partial \left ( \frac{c^{*L}}{\bar{c}^{L}} \right )/\partial r^{c}$ is greater than $\partial \left ( \frac{c^{*L}}{\bar{c}} \right )/\partial r^{c}$. Since equation (7) is the difference between $u\left ( r^{c},e_{H},c \right )$ and $+M\left \{ \left ( 1+r^{c} \right )\left [ 1-F\left ( e_{H},\left ( 1+r^{c} \right ) \right ) \right ] -\left ( 1+r^{m} \right )\left [ 1-F\left ( e_{H},\left ( 1+r^{m} \right ) \right ) \right ]\right \}$, both $\frac{\partial c^{*L}}{\partial c^{r}}$ and $\frac{\partial c^{*}}{\partial c^{r}}$ are negative but $\left | \frac{\partial c^{*L}}{\partial c^{r}}  \right | < \left | \frac{\partial c^{*}}{\partial c^{r}} \right |$. Hence, $\partial\left ( \frac{c^{*L}}{\bar{c^{L}}} -\frac{c^{*}}{\bar{c}}\right )/\partial r^{c} > \partial\left ( \frac{c^{*L}}{\bar{c}} -\frac{c^{*}}{\bar{c}}\right )/\partial r^{c} > 0$.
 
+Finally, according to Corollary 5, $c^{*L}$ increases with $\phi _{M}^{*}$. $\phi _{M}^{*}$ indicates the highest possible impact from the collusion between MFI and the borrower. According to the Nash bargaining solution, $\phi _{M}^{*}$, will be negatively related to borrower's bargaining power.
 
+$Corollary \ 9.$ The linkage benefits more when the borrower's bargaining power is weaker than MFI.
 
+It should be noted that this linkage is self-interest motivated on the part of the MFI. There is no incentive rent required for MFI to take its role (see @Fuentes1996), nor other policies such as subsidies are required. In other words, since MFI's money is directly involved in this linkage, the lending decision of MFI is itself a trustable endorsement of the borrower's reputation and repayment capacity. The benefit that MFI will get from making a partial loan can serve as a rent for MFI to be a bridge loan provider, and most importantly this rent is determined endogenously in the lending decision.
+
+There is a long line of literature addressing collusion in three-layer hierarchies (principal-supervisor-agent framework) (see @Tirole1986; Kofman1993; Laffont1997).^[The authors are greatly indebted to the anonymous referees for this important point.] Collusion refers to the sub-contract between supervisor and the agent. The possibility of collusion imposes an additional cost on the use of the supervisor. The principal is the residual claimant of the vertical structure. He designs the ¡¥collusion-proof¡¦ contract and offers it to the agent and the supervisor, including a formal grand contract linking together the principal, the supervisor and the agent and then an informal collusive side-contract linking only the supervisor and the agent. @Hwang2007 consider collusion between borrower and auditor in a lending contract. They show that depending on the economic environment, the bank may or may not want to deter such a collusion in the lending contract, as ¡¥collusion-proof¡¦ may be too costly for the bank.
+
+Our model is different from this line of literature in two aspects. First, our agency relations are only in two-layer hierarchies: MFIs-borrower, and bank-borrower. The MFIs-borrower contract takes place first. Then, the bank observes the MFIs¡¦ lending decision, and proceeds with the bank-borrower contract. Thus, as described in Section 'Introduction', the MFIs-bank linkage is self-interest motivated on the part of the MFI. That is, unlike the three-layer framework, there is no incentive rent required for MFI to take its role [@Fuentes1996; @Varghese2005], nor other policies such as subsidies are required.
+
+Second, our paper has characterized the ¡¥perfect Bayesian equilibrium¡¦ for this sequential two-layer agency problems. The reason we do not describe the optimal contracts for the two agency problems is the following: In a credit contract, interest rates (fees) usually vary with the borrower's repayment ability. Since we have assumed that, due to their locational advantage, MFIs have better information about the borrower's repayment ability. We should expect that the interest rates charged in the MFIs-borrower contract are lower than those charged in the bank-borrower contract. If so, it is then difficult to explain why the abundant evidence we will present in Section 'No linkage' shows that MFIs charge more than the bank (i.e. $r^{M} > r^{c}$).
+
+In our discussion, MFIs¡¦ lending serves as a collateral for the bank's lending. Hence, we have assumed that MFIs have the bargaining power to negotiate with the borrower on the bribe or linkage benefit [see e.g. the discussion in equation (5)]. On the other hand, the interest rates charged by commercial banks are usually regulated or competitive. Thus, the assumption that $r^{M} > r^{c}$ can fit in well with the evidence and also be explained by our model. Finally, the intuition that ¡¥bribes make shirking costly¡¦ is analogous to the bribery literature (see @Becker1974; @Polinsky2000), which shows that the bribe can serve as a substitute for the fine in the law enforcement settings.
+
+## 3 Related Evidence on Microfinance Activity
+
+In this section, we explain why MFIs are more informative than commercial banks, which play a key role in the proposed linkage. Then, we provide evidence that shows the importance of MFIs in inclusive development such as poverty reduction, while addressing briefly the failure of interventionist policies, which impose direct controls on commercial banks loan decisions, in facilitating credit flow to the poor. Finally, we describe some evidence that supports our theoretical conclusions for the benefits of a linkage between commercial banks and MFIs.
+
+### MFIs Are More Informative
+
+According to @Morduch1999a and @Morduch2000, who provided comprehensive surveys on the topic of rural finance, microfinance often displays patterns and features not commonly found in institutional lending. First of all, since MFIs are mostly located close to rural areas, lenders possess a great deal of information about relevant borrower characteristics, such as farming ability, size and quality of landholdings, cropping patterns and risk attitudes. In addition to advantages in location, @Sarap1991 discovered in survey data that the guarantee system prevalent in informal credit markets with diverse socioeconomic conditions is very complex. And the moneylender, through a variety of guarantees including collateral and personal relationship, is in a position to screen and monitor the borrowers with negligible cost in such a way that there is hardly any risk of default.
+
+Assessing 1438 households in six provinces in Indonesia, the country's largest microfinance bank judged about 40 percent of poor households as creditworthy, and possessing collateral appeared as a minor determinant of creditworthiness (see @Johnston2008). However, the formal banks may not want to provide financial services to the poor, as the lending brings about problems such as collateral, location, information and small loan size. Since the MFIs entered the scene more than a decade ago, they have always been local and have based their business on local relationships and were willing to serve the unbanked despite their desire for small size loans.^[@Jain1999 uses a model showing the informational advantage of lenders in the informal sector.]
+
+In order to exploit the informational advantage that the MFIs have, there is a need to establish a linkage between formal banks and the rural borrower via the MFIs. For example, given the 95¡V100% loan repayment rate of more than 1 million Self-Help Groups (SHGs) in India, the NABARD has initiated a credit linkage program^[See www.nabard.org/roles/microfinance/index.htm.] to reduce transaction costs for both banks and borrowers and thus achieve the objective of providing credit access to the poor or greater financial inclusion.^[A SHG is a homogeneous group of about 20 people, who can be financed by a bank without collateral, if the group has accumulated savings and has a credit history.] The MFIs charge interest rates that are much higher on average than bank interest rates but also show significant dispersion, presenting apparent discretion opportunities (see @Ghosh2001). As the MFIs have limited capital base, they usually charge high interest rate to cover their operational expenses. Currently, MFIs in general charge over 50% on their loans, but this high rate can be lowered for good borrowers as in the case of SHGs, if the MFIs can intermediate their access to the formal loan market. Recently, many MFI's in India, and ICICI Bank, India's second largest bank (and largest private bank), have entered into a mutually beneficial strategic partnership agreement to provide microfinance services to the poor, given the MFI's market knowledge of poor customers and the ICICI bank's vast financial resources (see @Ananth2005). In Indonesia, @Hamada2010 has shown that bank loans through linkage programs to MFIs contribute more than bank loans alone, in terms of outreach to the poorest of the poor, in line with our theoretical results.
+
+From the borrower's perspective, due to lack of access to formal financial services, the poor have developed a wide variety of informal, community-based financial arrangements to meet their financial needs, for example, the Rotating Credit and Savings Association (ROSCA), which typically consists of a group of community members who meet regularly to pool their savings, which is then lent out to one member of the group, who repays it, at which time it is lent out to another group member, and so on until each group member takes a turn borrowing and repaying the pool of savings. Evidence suggests that personal trust between group members and social homogeneity is more important to group loan repayment than general societal trust or acquaintanceship between members [@Cassar2007]. It has been well documented that joint-liability group lending can help reduce information asymmetries (see @Hermes2007), and outreach is lower in the case of lending to individuals than in the case of group lending [@Mersland2009]. Also @Ahlin2007 find evidence that repayment is affected negatively by the joint-liability rate and social ties, and positively by the strength of local sanctions and correlated returns. These informal mechanisms (i.e. issuing guarantees or group borrowing) may not be very successful, unless they are brought into operating alongside the MFIs. Banks and financial institutions have been entering the microfinance market in increasing numbers until 2008¡V2009 (see Figure 4). Since then, the linkage program has stabilized possibly showing cases of bad practices as we are trying to highlight in this paper. Nevertheless, as explained earlier, it is important to get MFIs to coordinate with self-help groups in order to establish a robust linkage framework with mainstream banks and make the bank-MFI linkage sustainable.
 
 ![Self-help group bank-linkage program in India. [Colour figure can be viewed at wileyonlinelibrary.com]. Source: NABARD (compiled from RBI Handbook of Statistics on the Indian Economy). Notes: Data during the year relate to Commercial Banks, RRBs and Co-operative Banks.](figure4.png)
 
+### MFIs can play an effective role in poverty reduction
 
+Most observers regard microfinance interventions as poverty reducing, although most microfinance schemes continue to benefit from external subsidies (see @Honohan2008). @Burgess2005 find that state-led bank branch expansion into rural un-banked locations in India significantly reduced rural poverty, using aggregate data. Besides this state-led financial expansion, the micro-credit movement in the recent years also seems to have revolutionized the banking system of many countries such as Bangladesh by moving a large segment of the rural population, from the informal to the formal market through access to institutional credit, thereby establishing the creditworthiness of the poor [@Robinson2001]. New institutions like Bangladesh's Grameen Bank and Bolivia's BancoSol have shown that it is possible to secure high rates of repayment while lending to poor households. The key is a series of new mechanisms, most famously ¡¥group-lending¡¦ with joint liability.^[
+See @Besley1995, @Ghatak1999 and @Conning1999. In terms of past evidence, @Ghatak1975 found a positive but a weak link between unorganized and organized credit markets in India.]
 
+The group-lending or peer-monitored lending schemes, pioneered by the Grameen Bank, introduce joint liability which induces a group formation of low risk borrowers. @Banerjee1994 have illustrated the working of the peer monitoring effect. Following the loan disbursement, the incentive system is likely to lead to peer monitoring, peer support and peer pressure between the borrowers, thus helping the lending institution to address the moral hazard and enforcement problems. @DeAghion2005 have described mechanisms, namely direct monitoring, regular repayment schedules, and the use of nonrefinancing threats, to generate high repayment rates from low-income borrowers without requiring collateral and without using group-lending contracts that feature joint liability. Such alternative types of group contracts expanded during the 1980s and 1990s, primarily sponsored by the NGOs. Lending to the poor is expensive due to high screening, monitoring and enforcement costs [@Karlan2007]. It is believed that group lending helps overcome this by harnessing social connections via peer monitoring and enforcing joint-liability loans. @Karlan2007 observes direct evidence that individual relationships deteriorate following a default, and that through successful monitoring, individuals know who to punish and who not to punish after default. Although these social network tools can be successful to have higher repayment and higher savings rates, there are costs following the breakdown of a social network. Hence, except for linkage with MFI, other tools can be costly.
 
+Granting small loans to help poor people start businesses became a popular poverty-fighting tool, encouraging private-sector activity (see @Hulme1996; @KabirHassan2002). However, due to capital constraints, MFIs can only lend a small amount of money. This will not suffice for many growth-oriented entrepreneurs to start any microenterprise. @Madajewicz2011 argues that individual liability offers the wealthier among poor (credit-constrained) borrowers larger loans even without monitoring, and hence micro businesses funded with individual-based loans as opposed to joint-liability contracts grow more. The strategic monitoring efforts of group members can differ in equilibrium due to the asymmetry between members in terms of future profits and due to free-riding problem [@VanEijkel2009]. Besides, another practical limitation of group lending in urban settings is that members are less likely to know each other well as to whether a member is safe or risky as one would know in a rural setting. Also under a group-lending scheme, a default by one borrower can affect the credit rating of the group as a whole. This might help explain why an individual loan contract for a good borrower can be welfare-enhancing if the MFIs with better information about those individual borrowers can graduate them to the formal bank for a larger loan amount to help fund a small business. The success of many individual cases such as in Bangladesh suggests that, if the creditworthiness of the poor established in the process of MFI lending can be incorporated in the credit decisions by formal commercial banks, there will be more chance for growth-oriented entrepreneurs to get access to loans from commercial banks. This market-oriented approach, as shown by the evidence below, is more effective in poverty reduction than current policies which mainly impose controls on commercial banks¡¦ credit decisions, helping achieve financial sustainability with social outreach. So an MFI not only plays the role of a financial intermediary but also can act as a social intermediary.
 
+### Failures of current interventionist policies
 
-
-
-
-
-
-
-
-
-
+The microfinance industry has developed over the past 30 years, but it is still far from reaching its full potential as the industry stands between increased commercialization and increased donor aid. The NGOs in microfinance not only face challenges in balancing outreach and financial sustainability, but there is growing evidence of their failure to make an overall impact on poverty reduction. It has been well documented in the literature that, the subsidized credit programs of the last three decades have failed miserably in giving a helping hand to that segment of the population those who have little access to credit.^[See @Morduch1996 for a discussion on failure of subsidized schemes. For different examples, also see www.microsave-africa.com.] Subsidies distort the market, creating a dependency on subsidies and ensuring that commercial players do not enter the market, effectively push the poorest further away from the point of becoming financially viable as entities in their own right. For example in India, in the 1960s and the 1970s policy intervention in the rural sector was rooted in agricultural finance in a manner that credit, often subsidized credit, was necessary to enable small farmers to adopt risky new crop technologies and also to push them over to commercial (as opposed to subsistence) agriculture. This type of ¡¥directed¡¦ and ¡¥subsidized¡¦ credit administered through government owned-commercial banks did not seem to have fully met the financial needs in the agricultural sector.^[Government loans for agriculture have existed in India since 1793, and short-term cooperative credit institutions have existed since 1904 and the banking sector expanded substantially from 1955 with regional rural banks (RRBs) being formed from 1975 onwards, increasing bank finance for rural households [@Premchander2003].] The loans provided for agricultural activities reflecting the government's pro-rural policies are called the priority sector loans.^[Credit allocation in favor of priority sectors such as agriculture has been the traditional instrument for monetary policy to play a distributive role; but it has the disadvantage of distorting the credit market.] Table 1 shows how reduction in priority sector loans contributed to improvement in profits of Regional Rural Banks (RRBs), reflecting the mistakes of the government's official priority sector policies. In the Figure, APS denotes the ratio of the priority sector loans to total assets, and LPS denotes the ratio of priority sector loans to total loans. The ratios are calculated from annual accounts data of RRBs, obtained from the website of India's Central Bank.^[See www.rbi.org.in. This dataset for RRBs has not been updated since 2002; thus, we could not use the latest data for this table.]
 
 Table 1. Mistakes of the government's official priority selector policies
 
