--- a/does_reference.bib
+++ b/does_reference.bib
@@ -156,11 +156,11 @@
   timestamp     = {2017-05-08},
 }
 
-@Article{Morduch1999,
+@Article{Morduch1996,
   author        = {Morduch, Jonathan},
   title         = {The role of subsidies in microfinance: evidence from the Grameen Bank},
   journal       = {Journal of development economics},
-  year          = {1999},
+  year          = {1996},
   volume        = {60},
   number        = {1},
   pages         = {229--248},
@@ -502,11 +502,11 @@
   timestamp     = {2017-05-08},
 }
 
-@Article{VanEijkel2011,
+@Article{VanEijkel2009,
   author        = {Van Eijkel, Remco and Hermes, Niels and Lensink, Robert},
   title         = {Group lending and the role of the group leader},
   journal       = {Small business economics},
-  year          = {2011},
+  year          = {2009},
   volume        = {36},
   number        = {3},
   pages         = {299--321},
@@ -528,9 +528,9 @@
   timestamp     = {2017-05-08},
 }
 
-@Misc{Armendariz2005,
-  author        = {Armend{\'a}riz, Beatriz and Morduch, Jonathan and others},
-  title         = {The economics of microfinance},
+@Misc{DeAghion2005,
+  author        = {De Aghion, B. A. and Morduch, J.},
+  title         = {The Economics of Microfinance},
   year          = {2005},
   __markedentry = {[CJY:6]},
   publisher     = {Cambridge, MA: MIt press},
@@ -589,11 +589,11 @@
   timestamp     = {2017-05-08},
 }
 
-@Article{Burgess2004,
+@Article{Burgess2005,
   author        = {Burgess, Robin and Pande, Rohini},
   title         = {Do rural banks matter? Evidence from the Indian social banking experiment},
   journal       = {The American Economic Review},
-  year          = {2004},
+  year          = {2005},
   number        = {95},
   pages         = {780--95},
   __markedentry = {[CJY:6]},
@@ -767,6 +767,24 @@
   __markedentry = {[CJY:6]},
   publisher     = {Wiley Online Library},
   timestamp     = {2017-05-08},
+}
+
+@Book{Drake2002,
+  author    = {Drake, D. and Rhyne, E.},
+  title     = {The Commercialization of Microfinance: Balancing Business and Development.},
+  year      = {2002},
+  publisher = {Bloomfield, Connecticut: Kumarian Press},
+  timestamp = {2017-05-15},
+}
+
+@InBook{Ghosh2001,
+  author    = {Ghosh, P., and Mookherjee, D. and Ray, D.},
+  title     = {Credit rationing in developing countries: an overview of the theory},
+  booktitle = {Readings in the Theory of Economic Development.},
+  year      = {2001},
+  editor    = {D. Mookherjee and D. Ray},
+  publisher = {London: Blackwell.},
+  timestamp = {2017-05-16},
 }
 
 @Comment{jabref-meta: databaseType:biblatex;}
